--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,45 @@
-* {
-  font-family: "Inter", serif;
+*{
   margin: 0;
   padding: 0;
-}
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  }
+  .container {
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgb(255, 255, 255);
+    
+  }
+  .header {
+    background: #8B6AC7;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .search-bar {
+    padding: 8px;
+    width: 50%;
+    border: none;
+    border-radius: 5px;
+  }
+  .icons {
+    display: flex;
+    gap: 10px;
+  }
+  .icon {
+    font-size: 18px;
+  }
+  
+  .nav-bar {
+    display: flex;
+    justify-content: space-around;
+    background: white;
+    padding: 10px 0;
+    border-bottom: 2px solid #d3d3d3;
+  }
+  .nav-bar a {
+    text-decoration: none;
+    font-weight: bold;
+  }
