redefinição de senha

--- a/src/app/redefinir-senha/redefinir-senha.component.css
+++ b/src/app/redefinir-senha/redefinir-senha.component.css
@@ -42,18 +42,14 @@
   color: #ffffff;
 }
 
-mat-form-field {
-  width: 100%;
+@media (max-width: 767px) {
+  .form-container {
+    width: 90%;
+  }
 }
 
-mat-chip-list {
-  width: 100%;
-}
-
-input.mat-input-element {
-  width: 100%;
-}
-
-mat-label {
-  color: #8B6AC7;
+@media (max-width: 991px) {
+  .form-container {
+    width: 70%;
+  }
 }
