--- a/src/app/perfil-usuario/perfil-usuario.component.css
+++ b/src/app/perfil-usuario/perfil-usuario.component.css
@@ -1,19 +1,13 @@
-* {
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
+.container {
+  max-width: 100%;
+  padding: 0;
 }
-
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 
 .header {
   background: #8B6AC7;
   padding: 10px;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -26,7 +20,7 @@ html, body {
 }
 
 .search-bar {
-  padding: 8px 8px 8px 30px; 
+  padding: 8px 8px 8px 30px;
   width: 50%;
   border: none;
   border-radius: 5px;
@@ -45,7 +39,7 @@ html, body {
 .icons {
   display: flex;
   gap: 10px;
-  margin-left: auto; 
+  margin-left: auto;
 }
 
 .icon {
@@ -146,7 +140,7 @@ html, body {
 
 @media (max-width: 768px) {
   .search-bar {
-    width: 80%; 
+    width: 80%;
   }
 
   .content {
@@ -155,6 +149,6 @@ html, body {
   }
 
   .mentor-profile, .contact-form {
-    width: 90%; 
+    width: 90%;
   }
 }
