--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 <!-- <app-navbar *ngIf="shouldShowNavbar()"></app-navbar> -->
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
