adição de rota de usuario e correção de log de erros

--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,21 +1,21 @@
 <div class="container">
-    <header class="header">
-      <div class="search-container">
-        <input type="text" class="search-bar" placeholder="Busque por tópicos">
-      </div>
-      <div class="icons">
-        <button type="submit" class="btn full-width">
-          <img src="assets/img/Sino.png" alt="Sino" width="20" height="20">
-        </button>
-        <button type="submit" class="btn full-width">
-          <img src="assets/img/Icon.png" alt="Icon" width="20" height="20">
-        </button>
-      </div>
-    </header>
-  
-    <nav class="nav-bar">
-      <a href="#" style="color: #34265E">Tópicos</a>
-      <a href="#" style="color: #34265E">Tópicos Concluídos</a>
-      <a href="#" style="color: #34265E">Entre em contato</a>
-    </nav>
+  <header class="header">
+    <div class="search-container">
+      <input type="text" class="search-bar" placeholder="Busque por tópicos">
+    </div>
+    <div class="icons">
+      <button type="submit" class="btn full-width">
+        <img src="assets/img/Sino.png" alt="Sino" width="20" height="20">
+      </button>
+      <button type="button" class="btn full-width" onclick="window.location.href='/perfil-usuario'">
+        <img src="assets/img/Icon.png" alt="Icon" width="20" height="20">
+      </button>
+    </div>
+  </header>
+
+  <nav class="nav-bar">
+    <a href="#" style="color: #34265E" onclick="window.location.href='./topicos'; return false;">Tópicos</a>
+    <a href="#" style="color: #34265E">Tópicos Concluídos</a>
+    <a href="#" style="color: #34265E">Entre em contato</a>
+  </nav>
 </div>
