--- a/src/app/perfil-usuario/perfil-usuario.component.html
+++ b/src/app/perfil-usuario/perfil-usuario.component.html
@@ -4,8 +4,8 @@
       <div class="profile-pic">
         <img src="assets/img/Icone Perfil.png" alt="Perfil" width="100" height="100">
       </div>
-      <p class="mentor-name">{{ user?.name }}</p>
-      <p class="mentor-username">{{ user?.email }}</p>
+      <p class="mentor-name">{{ user.name }}</p>
+      <p class="mentor-username">{{ user.email }}</p>
       <button class="btn" *ngIf="isMentor(user)">Visualizar tópicos respondidos</button>
     </section>
 
