--- a/src/app/topicos/topicos.component.html
+++ b/src/app/topicos/topicos.component.html
@@ -1,20 +1,19 @@
 <div class="container">
-    <div class="topico-card" *ngFor="let topico of paginatedTopicos">
-      <div class="topico-info">
-        <h3>{{ topico.titulo }}</h3>
-        <p>{{ topico.descricao }}</p>
-        <span class="autor">{{ topico.autor }}</span>
-      </div>
-      <button class="btn-atender">Atender topicos</button>
+  <div class="topico-card" *ngFor="let topico of paginatedTopicos">
+    <div class="topico-info">
+      <h3>{{ topico.title }}</h3> 
+      <p>{{ topico.description }}</p> 
+      <p><strong>Linguagens:</strong> {{ topico.languages.join(', ') }}</p> 
+      <span class="autor">Autor: {{ topico.author }}</span> 
     </div>
-  
-    <div class="bottom-controls">
-      <div class="pagination">
-        <button (click)="changePage('prev')" [disabled]="currentPage === 0">Anterior</button>
-        <button (click)="changePage('next')" [disabled]="(currentPage + 1) * itemsPerPage >= topicos.length">Próximo</button>
-      </div>
-      <button class="btn-criar" (click)="onCriarTopico()">Criar Tópico</button>
-
-    </div>
+    <button class="btn-atender">Atender tópicos</button>
   </div>
-  
+
+  <div class="bottom-controls">
+    <div class="pagination">
+      <button (click)="changePage('prev')" [disabled]="currentPage === 0">Anterior</button>
+      <button (click)="changePage('next')" [disabled]="(currentPage + 1) * itemsPerPage >= topicos.length">Próximo</button>
+    </div>
+    <button class="btn-criar" (click)="onCriarTopico()">Criar Tópico</button>
+  </div>
+</div>
