--- a/src/app/topicos/topicos.component.html
+++ b/src/app/topicos/topicos.component.html
@@ -11,8 +11,7 @@
   <h3 *ngIf="!searchTerm && somenteAtivos">
     Nenhum tópico foi concluído ainda!
   </h3>
-  <button class="btn-criar-empty" (click)="onCriarTopico()" *ngIf="!isMentor && !somenteAtivos && !searchTerm">Criar
-    Tópico</button>
+  <button class="btn-criar-empty" (click)="onCriarTopico()" *ngIf="!isMentor && !somenteAtivos && !searchTerm">Criar Tópico</button>
 </div>
 
 <div class="container" *ngIf="paginatedTopicos.length > 0">
@@ -23,15 +22,24 @@
       <p><strong>Linguagens:</strong> {{ topico.languages.join(', ') }}</p>
       <span class="autor">Autor: {{ topico.author }}</span>
     </div>
-    <button class="btn-atender" *ngIf="isMentor">Atender tópicos</button>
-    <button class="btn-atender" *ngIf="!isMentor">Visualizar respostas</button>
+    <button
+      class="btn-atender"
+      *ngIf="isMentor"
+      (click)="atenderTopico(topico)">
+      Atender tópicos
+    </button>
+    <button
+      class="btn-atender"
+      *ngIf="!isMentor"
+      (click)="abrirChat(topico)">
+      Visualizar respostas
+    </button>
   </div>
 
   <div class="bottom-controls">
     <div class="pagination">
       <button (click)="changePage('prev')" [disabled]="currentPage === 0">Anterior</button>
-      <button (click)="changePage('next')"
-        [disabled]="(currentPage + 1) * itemsPerPage >= topicos.length">Próximo</button>
+      <button (click)="changePage('next')" [disabled]="(currentPage + 1) * itemsPerPage >= topicos.length">Próximo</button>
     </div>
     <button class="btn-criar" (click)="onCriarTopico()" *ngIf="!isMentor">Criar Tópico</button>
   </div>
