adicionando modal de confirmação para concluir chat, alterando lógica de conclusão e atualizando estilos; adicionando novos ícones e ajustando dependências

--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -7,10 +7,10 @@
 
     <div class="icons">
       <button type="submit" class="btn full-width">
-        <img src="assets/img/Sino.png" alt="Sino" width="20" height="20">
+        <img src="assets/img/logout.png" alt="Sino" width="20" height="20" (click)="logout()">
       </button>
       <button type="button" class="btn full-width" onclick="window.location.href='/perfil-usuario'">
-        <img src="assets/img/Icon.png" alt="Icon" width="20" height="20">
+        <img src="assets/img/user.png" alt="Icon" width="20" height="20">
       </button>
     </div>
   </header>
