Realizando ajustes finais

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="col-12 col-md-4 bg-branco min-vh-100 d-flex flex-column justify-content-center align-items-center">
     <div>
-      <h1 class="title">CodeBegginerHub</h1>
+      <h1 class="title">CodeBeginnerHub</h1>
 
       <h2 class="subtitle">Acesse sua conta</h2>
 
