--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -2,7 +2,7 @@
   <div class="chat-conversa">
     <div class="chat-header">
       <h3>{{ meuEmail }} <span class="versus">-</span> {{ nomeOutroUsuario }}</h3>
-      <button class="btn-padrao" (click)="openModal()" *ngIf="!topicoConcluido" [disabled]="topicoConcluido">
+      <button class="btn-padrao" (click)="openModal()" *ngIf="!topicoConcluido && !isMentor" [disabled]="topicoConcluido">
         Concluir chat
       </button>
     </div>
