--- a/src/app/entre-em-contato/entre-em-contato.component.css
+++ b/src/app/entre-em-contato/entre-em-contato.component.css
@@ -1,13 +1,20 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 .contato-page {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 85vh;
 }
 
 .contato-miolo {
-  background-color: #9b5de5;
+  background-color: #ffffff;
   color: white;
-  height: 70vh;
+  height: 55vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,6 +23,7 @@
 .contato-miolo h2 {
   font-size: 2rem;
   text-align: center;
+  color: #3a0ca3;
 }
 
 .contato-rodape {
